--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,6 +1,7 @@
 .home-bg-container {
-  height: 100vh;
+  min-height: 100vh;
   background-color: #e5e5e5;
+  /* background-color: #000; */
 }
 
 .home-content-container {
